Version: 3.0.0
Date: ????
  Info:
    - Commence total rewrite away from alerts
    - Merge and simplify entity & tile ghost handling
    - Give turrets their own lua file
    - Detect which turrets are able to fulfill a ghost
    - Construct the ghost by reviving
    - Request scaffold animation and revive once it is all up
---------------------------------------------------------------------------------------------------
Version: 2.1.2
Date: 2025. 08. 22
  Info:
    - Fix item request proxies over a stack voiding items
---------------------------------------------------------------------------------------------------
Version: 2.1.1
Date: 2025. 08. 15
  Info:
    - Whitelist the new magic hut tiers
---------------------------------------------------------------------------------------------------
Version: 2.1.0
Date: 2025. 07. 10
  Info:
    - Depend on disposable construction robots for better deliveries
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 2025. 07. 09
  Info:
    - Drop items on the ground if storage is full
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2025. 07. 04
  Info:
    - Ported to 2.0
---------------------------------------------------------------------------------------------------
Version: 1.2.4
Date: 2024. 09. 15
  Info:
    - Fix crash when alerts have a nil target
---------------------------------------------------------------------------------------------------
Version: 1.2.3
Date: 2024. 09. 12
  Info:
    - Support delivering items to fake factorissimo tiers 2 and 3
---------------------------------------------------------------------------------------------------
Version: 1.2.2
Date: 2024. 09. 12
  Info:
    - Support cliff explosives
---------------------------------------------------------------------------------------------------
Version: 1.2.1
Date: 2024. 09. 09
  Info: