@@ -1,5 +1,6 @@
 [entity-name]
 interstellar-construction-turret=Interstellar construction turret
+interstellar-construction-character=Interstellar construction character
 
 [technology-name]
 interstellar-construction-turret=Interstellar construction turret
